Sec21_Chap216-XXX: cleaned test code, test code optimizations